[package]
name = "quantx-engine"
authors = ["nubiv <h.horace0921@gmail.com>"]
license = "MIT"
description = "quantx-engine"
repository = "https://github.com/nubiv/quantx-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"

polars = "0.49.1"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-optimisers = "0.9.0"

kanal = "0.1.1"
parking_lot = "0.12.4"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "2.0.12"

chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.2"
charming = "0.6.0"
toml = "0.9.2"
spin_sleep = "1.3.2"
